# hd-wallet

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/wallet/: database.py  dependencies.py  exeptions.py  filters.py  hd_wallet.py  manager.py  models.py  router.py  schemas.py  web3_client.py
config/: app.py  db.py  logger.py  router.py  settings.py
deploy/app/base/: Dockerfile
deploy/nginx/: nginx.conf
migrations/: env.py
migrations/versions/: 21f0f20e9bba_add_field_public_key.py  3eae1e681fcf_add_awllet_to_transaction_model.py  42d35ab89340_create_transaction_model.py  75c65942a949_adds_user_table.py  87d79cc9e70b_changed_field_for_publick_address.py  d46f71954db0_change_unique_for_mnemonic.py  d75e5550c845_adds_wallet_table.py  f969aba9110a_created_some_models.py
tests/: conftest.py
tests/wallet_tests/: create_wallet_test.py  wallet_test.py
