[tool.poetry]
name = "kauri one"
version = "0.1.0"
description = ""
authors = ["isamarcev <isamarcev1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
pyjwt = "^2.7.0"
bcrypt = "^4.0.1"
pydantic = "1.7.4"
aioredis = "^2.0.1"
web3 = "^6.5.0"
pytest = "^7.4.0"
celery = "^5.3.1"
toml = "^0.10.2"
sqlalchemy = "^1.4.46"
fastapi = "^0.89.1"
hdwallet = "^2.2.1"
starlette = "0.22.0"
fastapi-helper = "^0.0.12"
python-dotenv = "^1.0.0"
sqlalchemy-utils = "^0.41.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
